fix horizontal scroll on mobile to show shadow implying there is content on the right

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.shadow-r {
+    box-shadow: inset -30px 0 20px -30px rgba(0, 0, 0, 0.5);
+}
